project(heat_v1)
cmake_minimum_required(VERSION 2.8)

include_directories(l2c)
include_directories(src)
include_directories(include)

set (CMAKE_CXX_FLAGS "-O3 -fopenmp ")

include(FindMPI)
if(NOT ${MPI_FOUND})
  message(SEND_ERROR "no MPI found, mhello module will not be compiled")
endif(NOT ${MPI_FOUND})

include_directories(${MPI_INCLUDE_PATH} include)

add_library(Driver MODULE src/Driver/Driver.cpp)
target_link_libraries(Driver ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(Driver PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(Driver PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS Driver LIBRARY DESTINATION lib)

add_library(DriverApp MODULE src/DriverApp/DriverApp.cpp)
target_link_libraries(DriverApp ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(DriverApp PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(DriverApp PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS DriverApp LIBRARY DESTINATION lib)

add_library(DriverAppOnly MODULE src/DriverApp/DriverAppOnly.cpp)
target_link_libraries(DriverAppOnly ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(DriverAppOnly PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(DriverAppOnly PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS DriverAppOnly LIBRARY DESTINATION lib)

add_library(Structure MODULE src/Structure/Struct.cpp)
target_link_libraries(Structure ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(Structure PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(Structure PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS Structure LIBRARY DESTINATION lib)

add_library(StructureSK MODULE src/Structure/Struct_SK.cpp)
target_link_libraries(StructureSK ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(StructureSK PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(StructureSK PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS StructureSK LIBRARY DESTINATION lib)

#add_library(Data MODULE src/Data/Data.cpp)
#target_link_libraries(Data ${MPI_LIBRARIES})
#foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
#        set_target_properties(Data PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
#endforeach(COMPILE_FLAG)
#foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
#        set_target_properties(Data PROPERTIES LINK_FLAGS ${LINK_FLAG})
#endforeach(LINK_FLAG)
#install(TARGETS Data LIBRARY DESTINATION lib)

add_library(DataSK0 MODULE src/Data/Data_SK0.cpp)
target_link_libraries(DataSK0 ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(DataSK0 PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(DataSK0 PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS DataSK0 LIBRARY DESTINATION lib)

add_library(DataSK MODULE src/Data/Data_SK.cpp)
target_link_libraries(DataSK ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(DataSK PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(DataSK PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS DataSK LIBRARY DESTINATION lib)

add_library(Sequence MODULE src/Sequence/Sequence.cpp)
target_link_libraries(Sequence ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(Sequence PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(Sequence PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS Sequence LIBRARY DESTINATION lib)

add_library(SeqParOmp MODULE src/SeqParOmp/SeqParOmp.cpp)
target_link_libraries(SeqParOmp ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(SeqParOmp PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(SeqParOmp PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS SeqParOmp LIBRARY DESTINATION lib)

add_library(Sync MODULE src/Sync/Sync.cpp)
target_link_libraries(Sync ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(Sync PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(Sync PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS Sync LIBRARY DESTINATION lib)

add_library(Time MODULE src/Time/Time.cpp)
target_link_libraries(Time ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(Time PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(Time PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS Time LIBRARY DESTINATION lib)

add_library(TimeO MODULE src/Time/TimeO.cpp)
target_link_libraries(TimeO ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(TimeO PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(TimeO PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS TimeO LIBRARY DESTINATION lib)

add_library(Parallel MODULE src/Parallel/Parallel.cpp)
target_link_libraries(Parallel ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(Parallel PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(Parallel PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS Parallel LIBRARY DESTINATION lib)

#####################KERNELS

add_library(Kbloc1x1_bloc1x2 MODULE src/Kernels/Kbloc1x1_bloc1x2.cpp)
target_link_libraries(Kbloc1x1_bloc1x2 ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(Kbloc1x1_bloc1x2 PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(Kbloc1x1_bloc1x2 PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS Kbloc1x1_bloc1x2 LIBRARY DESTINATION lib)

add_library(Kbloc1x1 MODULE src/Kernels/Kbloc1x1.cpp)
target_link_libraries(Kbloc1x1 ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(Kbloc1x1 PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(Kbloc1x1 PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS Kbloc1x1 LIBRARY DESTINATION lib)

add_library(Kbloc1x2 MODULE src/Kernels/Kbloc1x2.cpp)
target_link_libraries(Kbloc1x2 ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(Kbloc1x2 PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(Kbloc1x2 PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS Kbloc1x2 LIBRARY DESTINATION lib)

add_library(Kbloc1x3_bloc1x4_bloc1x5 MODULE src/Kernels/Kbloc1x3_bloc1x4_bloc1x5.cpp)
target_link_libraries(Kbloc1x3_bloc1x4_bloc1x5 ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(Kbloc1x3_bloc1x4_bloc1x5 PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(Kbloc1x3_bloc1x4_bloc1x5 PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS Kbloc1x3_bloc1x4_bloc1x5 LIBRARY DESTINATION lib)

add_library(Kbloc1x3 MODULE src/Kernels/Kbloc1x3.cpp)
target_link_libraries(Kbloc1x3 ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(Kbloc1x3 PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(Kbloc1x3 PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS Kbloc1x3 LIBRARY DESTINATION lib)

add_library(Kbloc1x4 MODULE src/Kernels/Kbloc1x4.cpp)
target_link_libraries(Kbloc1x4 ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(Kbloc1x4 PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(Kbloc1x4 PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS Kbloc1x4 LIBRARY DESTINATION lib)

add_library(Kbloc1x5 MODULE src/Kernels/Kbloc1x5.cpp)
target_link_libraries(Kbloc1x5 ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(Kbloc1x5 PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(Kbloc1x5 PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS Kbloc1x5 LIBRARY DESTINATION lib)

add_library(Kbloc1y1_bloc1y2 MODULE src/Kernels/Kbloc1y1_bloc1y2.cpp)
target_link_libraries(Kbloc1y1_bloc1y2 ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(Kbloc1y1_bloc1y2 PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(Kbloc1y1_bloc1y2 PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS Kbloc1y1_bloc1y2 LIBRARY DESTINATION lib)

add_library(Kbloc1y1 MODULE src/Kernels/Kbloc1y1.cpp)
target_link_libraries(Kbloc1y1 ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(Kbloc1y1 PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(Kbloc1y1 PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS Kbloc1y1 LIBRARY DESTINATION lib)

add_library(Kbloc1y2 MODULE src/Kernels/Kbloc1y2.cpp)
target_link_libraries(Kbloc1y2 ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(Kbloc1y2 PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(Kbloc1y2 PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS Kbloc1y2 LIBRARY DESTINATION lib)

add_library(Kbloc1y3_bloc1y4_bloc1y5 MODULE src/Kernels/Kbloc1y3_bloc1y4_bloc1y5.cpp)
target_link_libraries(Kbloc1y3_bloc1y4_bloc1y5 ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(Kbloc1y3_bloc1y4_bloc1y5 PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(Kbloc1y3_bloc1y4_bloc1y5 PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS Kbloc1y3_bloc1y4_bloc1y5 LIBRARY DESTINATION lib)

add_library(Kbloc1y3 MODULE src/Kernels/Kbloc1y3.cpp)
target_link_libraries(Kbloc1y3 ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(Kbloc1y3 PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(Kbloc1y3 PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS Kbloc1y3 LIBRARY DESTINATION lib)

add_library(Kbloc1y4 MODULE src/Kernels/Kbloc1y4.cpp)
target_link_libraries(Kbloc1y4 ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(Kbloc1y4 PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(Kbloc1y4 PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS Kbloc1y4 LIBRARY DESTINATION lib)

add_library(Kbloc1y5 MODULE src/Kernels/Kbloc1y5.cpp)
target_link_libraries(Kbloc1y5 ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(Kbloc1y5 PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(Kbloc1y5 PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS Kbloc1y5 LIBRARY DESTINATION lib)

add_library(Kbloc21_bloc22_bloc23_heun1_heun2_heun3 MODULE src/Kernels/Kbloc21_bloc22_bloc23_heun1_heun2_heun3.cpp)
target_link_libraries(Kbloc21_bloc22_bloc23_heun1_heun2_heun3 ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(Kbloc21_bloc22_bloc23_heun1_heun2_heun3 PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(Kbloc21_bloc22_bloc23_heun1_heun2_heun3 PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS Kbloc21_bloc22_bloc23_heun1_heun2_heun3 LIBRARY DESTINATION lib)

add_library(Kbloc21_bloc22_bloc23_check_checkus_checkvs MODULE src/Kernels/Kbloc21_bloc22_bloc23_check_checkus_checkvs.cpp)
target_link_libraries(Kbloc21_bloc22_bloc23_check_checkus_checkvs ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(Kbloc21_bloc22_bloc23_check_checkus_checkvs PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(Kbloc21_bloc22_bloc23_check_checkus_checkvs PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS Kbloc21_bloc22_bloc23_check_checkus_checkvs LIBRARY DESTINATION lib)

add_library(Kbloc21 MODULE src/Kernels/Kbloc21.cpp)
target_link_libraries(Kbloc21 ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(Kbloc21 PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(Kbloc21 PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS Kbloc21 LIBRARY DESTINATION lib)

add_library(Kbloc22 MODULE src/Kernels/Kbloc22.cpp)
target_link_libraries(Kbloc22 ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(Kbloc22 PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(Kbloc22 PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS Kbloc22 LIBRARY DESTINATION lib)

add_library(Kbloc23 MODULE src/Kernels/Kbloc23.cpp)
target_link_libraries(Kbloc23 ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(Kbloc23 PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(Kbloc23 PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS Kbloc23 LIBRARY DESTINATION lib)

add_library(Kcheck MODULE src/Kernels/Kcheck.cpp)
target_link_libraries(Kcheck ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(Kcheck PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(Kcheck PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS Kcheck LIBRARY DESTINATION lib)

add_library(Kcheckus MODULE src/Kernels/Kcheckus.cpp)
target_link_libraries(Kcheckus ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(Kcheckus PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(Kcheckus PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS Kcheckus LIBRARY DESTINATION lib)

add_library(Kcheckvs MODULE src/Kernels/Kcheckvs.cpp)
target_link_libraries(Kcheckvs ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(Kcheckvs PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(Kcheckvs PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS Kcheckvs LIBRARY DESTINATION lib)

add_library(Kdelzf MODULE src/Kernels/Kdelzf.cpp)
target_link_libraries(Kdelzf ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(Kdelzf PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(Kdelzf PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS Kdelzf LIBRARY DESTINATION lib)

add_library(Kdelzc1f_delzc2f MODULE src/Kernels/Kdelzc1f_delzc2f.cpp)
target_link_libraries(Kdelzc1f_delzc2f ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(Kdelzc1f_delzc2f PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(Kdelzc1f_delzc2f PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS Kdelzc1f_delzc2f LIBRARY DESTINATION lib)

add_library(Kdelzc1f MODULE src/Kernels/Kdelzc1f.cpp)
target_link_libraries(Kdelzc1f ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(Kdelzc1f PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(Kdelzc1f PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS Kdelzc1f LIBRARY DESTINATION lib)

add_library(Kdelzc2f MODULE src/Kernels/Kdelzc2f.cpp)
target_link_libraries(Kdelzc2f ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(Kdelzc2f PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(Kdelzc2f PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS Kdelzc2f LIBRARY DESTINATION lib)

add_library(Kheun1 MODULE src/Kernels/Kheun1.cpp)
target_link_libraries(Kheun1 ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(Kheun1 PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(Kheun1 PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS Kheun1 LIBRARY DESTINATION lib)

add_library(Kheun2 MODULE src/Kernels/Kheun2.cpp)
target_link_libraries(Kheun2 ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(Kheun2 PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(Kheun2 PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS Kheun2 LIBRARY DESTINATION lib)

add_library(Kheun3 MODULE src/Kernels/Kheun3.cpp)
target_link_libraries(Kheun3 ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(Kheun3 PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(Kheun3 PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS Kheun3 LIBRARY DESTINATION lib)

add_library(Khuvh1l_huvh1r_huvu1l_huvu1r_huvv1l_huvv1r_huvz1l_huvz1r MODULE src/Kernels/Khuvh1l_huvh1r_huvu1l_huvu1r_huvv1l_huvv1r_huvz1l_huvz1r.cpp)
target_link_libraries(Khuvh1l_huvh1r_huvu1l_huvu1r_huvv1l_huvv1r_huvz1l_huvz1r ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(Khuvh1l_huvh1r_huvu1l_huvu1r_huvv1l_huvv1r_huvz1l_huvz1r PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(Khuvh1l_huvh1r_huvu1l_huvu1r_huvv1l_huvv1r_huvz1l_huvz1r PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS Khuvh1l_huvh1r_huvu1l_huvu1r_huvv1l_huvv1r_huvz1l_huvz1r LIBRARY DESTINATION lib)

add_library(Khuvh1l MODULE src/Kernels/Khuvh1l.cpp)
target_link_libraries(Khuvh1l ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(Khuvh1l PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(Khuvh1l PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS Khuvh1l LIBRARY DESTINATION lib)

add_library(Khuvu1l MODULE src/Kernels/Khuvu1l.cpp)
target_link_libraries(Khuvu1l ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(Khuvu1l PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(Khuvu1l PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS Khuvu1l LIBRARY DESTINATION lib)

add_library(Khuvv1l MODULE src/Kernels/Khuvv1l.cpp)
target_link_libraries(Khuvv1l ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(Khuvv1l PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(Khuvv1l PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS Khuvv1l LIBRARY DESTINATION lib)

add_library(Khuvz1l MODULE src/Kernels/Khuvz1l.cpp)
target_link_libraries(Khuvz1l ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(Khuvz1l PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(Khuvz1l PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS Khuvz1l LIBRARY DESTINATION lib)

add_library(Khuvh1r MODULE src/Kernels/Khuvh1r.cpp)
target_link_libraries(Khuvh1r ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(Khuvh1r PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(Khuvh1r PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS Khuvh1r LIBRARY DESTINATION lib)

add_library(Khuvu1r MODULE src/Kernels/Khuvu1r.cpp)
target_link_libraries(Khuvu1r ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(Khuvu1r PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(Khuvu1r PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS Khuvu1r LIBRARY DESTINATION lib)

add_library(Khuvv1r MODULE src/Kernels/Khuvv1r.cpp)
target_link_libraries(Khuvv1r ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(Khuvv1r PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(Khuvv1r PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS Khuvv1r LIBRARY DESTINATION lib)

add_library(Khuvz1r MODULE src/Kernels/Khuvz1r.cpp)
target_link_libraries(Khuvz1r ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(Khuvz1r PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(Khuvz1r PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS Khuvz1r LIBRARY DESTINATION lib)

add_library(Khuvh2l_huvh2r_huvu2l_huvu2r_huvv2l_huvv2r_huvz2l_huvz2r MODULE src/Kernels/Khuvh2l_huvh2r_huvu2l_huvu2r_huvv2l_huvv2r_huvz2l_huvz2r.cpp)
target_link_libraries(Khuvh2l_huvh2r_huvu2l_huvu2r_huvv2l_huvv2r_huvz2l_huvz2r ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(Khuvh2l_huvh2r_huvu2l_huvu2r_huvv2l_huvv2r_huvz2l_huvz2r PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(Khuvh2l_huvh2r_huvu2l_huvu2r_huvv2l_huvv2r_huvz2l_huvz2r PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS Khuvh2l_huvh2r_huvu2l_huvu2r_huvv2l_huvv2r_huvz2l_huvz2r LIBRARY DESTINATION lib)

add_library(Khuvh2l MODULE src/Kernels/Khuvh2l.cpp)
target_link_libraries(Khuvh2l ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(Khuvh2l PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(Khuvh2l PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS Khuvh2l LIBRARY DESTINATION lib)

add_library(Khuvu2l MODULE src/Kernels/Khuvu2l.cpp)
target_link_libraries(Khuvu2l ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(Khuvu2l PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(Khuvu2l PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS Khuvu2l LIBRARY DESTINATION lib)

add_library(Khuvv2l MODULE src/Kernels/Khuvv2l.cpp)
target_link_libraries(Khuvv2l ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(Khuvv2l PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(Khuvv2l PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS Khuvv2l LIBRARY DESTINATION lib)

add_library(Khuvz2l MODULE src/Kernels/Khuvz2l.cpp)
target_link_libraries(Khuvz2l ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(Khuvz2l PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(Khuvz2l PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS Khuvz2l LIBRARY DESTINATION lib)

add_library(Khuvh2r MODULE src/Kernels/Khuvh2r.cpp)
target_link_libraries(Khuvh2r ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(Khuvh2r PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(Khuvh2r PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS Khuvh2r LIBRARY DESTINATION lib)

add_library(Khuvu2r MODULE src/Kernels/Khuvu2r.cpp)
target_link_libraries(Khuvu2r ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(Khuvu2r PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(Khuvu2r PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS Khuvu2r LIBRARY DESTINATION lib)

add_library(Khuvv2r MODULE src/Kernels/Khuvv2r.cpp)
target_link_libraries(Khuvv2r ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(Khuvv2r PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(Khuvv2r PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS Khuvv2r LIBRARY DESTINATION lib)

add_library(Khuvz2r MODULE src/Kernels/Khuvz2r.cpp)
target_link_libraries(Khuvz2r ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(Khuvz2r PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(Khuvz2r PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS Khuvz2r LIBRARY DESTINATION lib)

add_library(Klimhl_limul_limvl MODULE src/Kernels/Klimhl_limul_limvl.cpp)
target_link_libraries(Klimhl_limul_limvl ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(Klimhl_limul_limvl PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(Klimhl_limul_limvl PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS Klimhl_limul_limvl LIBRARY DESTINATION lib)

add_library(Klimhr_limur_limvr MODULE src/Kernels/Klimhr_limur_limvr.cpp)
target_link_libraries(Klimhr_limur_limvr ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(Klimhr_limur_limvr PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(Klimhr_limur_limvr PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS Klimhr_limur_limvr LIBRARY DESTINATION lib)

add_library(Klimhu_limuu_limvu MODULE src/Kernels/Klimhu_limuu_limvu.cpp)
target_link_libraries(Klimhu_limuu_limvu ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(Klimhu_limuu_limvu PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(Klimhu_limuu_limvu PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS Klimhu_limuu_limvu LIBRARY DESTINATION lib)

add_library(Klimhd_limud_limvd MODULE src/Kernels/Klimhd_limud_limvd.cpp)
target_link_libraries(Klimhd_limud_limvd ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(Klimhd_limud_limvd PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(Klimhd_limud_limvd PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS Klimhd_limud_limvd LIBRARY DESTINATION lib)

add_library(Klimhd MODULE src/Kernels/Klimhd.cpp)
target_link_libraries(Klimhd ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(Klimhd PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(Klimhd PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS Klimhd LIBRARY DESTINATION lib)

add_library(Klimud MODULE src/Kernels/Klimud.cpp)
target_link_libraries(Klimud ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(Klimud PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(Klimud PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS Klimud LIBRARY DESTINATION lib)

add_library(Klimvd MODULE src/Kernels/Klimvd.cpp)
target_link_libraries(Klimvd ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(Klimvd PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(Klimvd PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS Klimvd LIBRARY DESTINATION lib)

add_library(Klimhl MODULE src/Kernels/Klimhl.cpp)
target_link_libraries(Klimhl ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(Klimhl PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(Klimhl PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS Klimhl LIBRARY DESTINATION lib)

add_library(Klimul MODULE src/Kernels/Klimul.cpp)
target_link_libraries(Klimul ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(Klimul PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(Klimul PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS Klimul LIBRARY DESTINATION lib)

add_library(Klimvl MODULE src/Kernels/Klimvl.cpp)
target_link_libraries(Klimvl ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(Klimvl PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(Klimvl PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS Klimvl LIBRARY DESTINATION lib)

add_library(Klimhr MODULE src/Kernels/Klimhr.cpp)
target_link_libraries(Klimhr ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(Klimhr PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(Klimhr PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS Klimhr LIBRARY DESTINATION lib)

add_library(Klimur MODULE src/Kernels/Klimur.cpp)
target_link_libraries(Klimur ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(Klimur PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(Klimur PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS Klimur LIBRARY DESTINATION lib)

add_library(Klimvr MODULE src/Kernels/Klimvr.cpp)
target_link_libraries(Klimvr ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(Klimvr PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(Klimvr PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS Klimvr LIBRARY DESTINATION lib)

add_library(Klimhu MODULE src/Kernels/Klimhu.cpp)
target_link_libraries(Klimhu ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(Klimhu PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(Klimhu PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS Klimhu LIBRARY DESTINATION lib)

add_library(Klimuu MODULE src/Kernels/Klimuu.cpp)
target_link_libraries(Klimuu ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(Klimuu PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(Klimuu PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS Klimuu LIBRARY DESTINATION lib)

add_library(Klimvu MODULE src/Kernels/Klimvu.cpp)
target_link_libraries(Klimvu ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(Klimvu PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(Klimvu PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS Klimvu LIBRARY DESTINATION lib)

######################

add_library(Initializer MODULE src/Initializer/Initializer.cpp)
target_link_libraries(Initializer ${MPI_LIBRARIES})
foreach(COMPILE_FLAG IN LISTS MPI_COMPILE_FLAGS)
        set_target_properties(Initializer PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
endforeach(COMPILE_FLAG)
foreach(LINK_FLAG IN LISTS MPI_LINK_FLAGS)
        set_target_properties(Initializer PROPERTIES LINK_FLAGS ${LINK_FLAG})
endforeach(LINK_FLAG)
install(TARGETS Initializer LIBRARY DESTINATION lib)

install(DIRECTORY include/ DESTINATION include/ FILES_MATCHING PATTERN "*.h" PATTERN "*/*" EXCLUDE)
install(DIRECTORY lad/ DESTINATION lib/lad/ FILES_MATCHING PATTERN "*.lad")
